--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
         "@gtm-support/vue-gtm": "^1.6.0",
         "axios": "^0.27.2",
         "core-js": "^3.8.3",
+        "gsap": "^3.10.4",
         "vue": "^3.2.13",
         "vue-axios": "^3.4.1",
         "vue-meta": "^3.0.0-alpha.8",
