--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     },
     "dependencies": {
         "@gtm-support/vue-gtm": "^1.6.0",
+        "@vueuse/head": "^0.7.6",
         "axios": "^0.27.2",
         "core-js": "^3.8.3",
         "gsap": "^3.10.4",
