--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
         "vue": "^3.2.13",
         "vue-axios": "^3.4.1",
         "vue-meta": "^3.0.0-alpha.8",
-        "vue-router": "^4.0.16"
+        "vue-router": "^4.0.16",
+        "vueperslides": "^3.4.2"
     },
     "devDependencies": {
         "@babel/core": "^7.12.16",
