--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
         "gsap": "^3.10.4",
         "vue": "^3.2.13",
         "vue-axios": "^3.4.1",
+        "vue-instagram": "^3.0.0",
         "vue-meta": "^3.0.0-alpha.8",
         "vue-router": "^4.0.16",
         "vueperslides": "^3.4.2"
