--- a/package.json
+++ b/package.json
@@ -22,7 +22,7 @@
     "@nuxtjs/sitemap": "^2.4.0",
     "core-js": "^3.19.3",
     "nuxt": "^2.15.8",
-    "nuxt-leaflet": "^0.0.27",
+    "nuxt-gmaps": "^1.2.10",
     "sass-loader": "^10.1.1",
     "vue": "^2.6.14",
     "vue-awesome-swiper": "^4.1.1",
